Update docs wording

--- a/website/content/api-docs/secret/consul.mdx
+++ b/website/content/api-docs/secret/consul.mdx
@@ -81,7 +81,7 @@ Consul version.
 ### Parameters for Consul versions 1.11 and above
 
 - `partition` `(string: "")` - Specifies the Consul admin partition in which the token is generated within.
- The partition must exist, and the Consul policies or roles assigned to the
+  The partition must exist, and the Consul policies or roles assigned to the
   Vault role must also exist inside the given partition. If it's not provided, the partition `default`
   is used.
 
@@ -95,8 +95,8 @@ To create a client token within a particular Consul admin partition:
 
 ### Parameters for Consul versions 1.8 and above
 
-- `consul_namespace` `(string: "")` - Specifies the Consul admin partition in which the token is generated within.
-The namespace must exist, and the Consul policies or roles assigned
+- `consul_namespace` `(string: "")` - Specifies the Consul namespace in which the token is generated within.
+  The namespace must exist, and the Consul policies or roles assigned
   to the Vault role must also exist inside the given Consul namespace. If not provided, the 
   namespace `default` is used.
 
