--- a/website/content/docs/secrets/consul.mdx
+++ b/website/content/docs/secrets/consul.mdx
@@ -29,8 +29,8 @@ management tool.
 
 1.  Configure Vault to connect and authenticate to Consul.
 
-    For Vault 1.11 and above, Vault can bootstrap the Consul ACL system for you if it hasn't already
-    been done. If you have already bootstrapped the Consul ACL system, then you will need to provide
+    Vault can bootstrap the Consul ACL system for you if it hasn't already been done. If you
+    have already bootstrapped the Consul ACL system, then you will need to provide
     Vault with a management token. This can either be the bootstrap token or another management
     token you've created yourself.    
 
@@ -42,10 +42,10 @@ management tool.
         Success! Data written to: consul/config/access
         ```
 
-        ~> When you let Vault do the bootstrap for you, it will silently store the bootstrap token as the
-        configuration token. It will not be presented to the user. If you need another management token,
-        you will need to generate one by writing a Vault role with the `global-management` policy,
-        then reading a new secret from that role.
+        ~> Note: When you let Vault perform the bootstrap for you, it will silently store the bootstrap token as the
+        configuration token; it will not be presented to the user. If you need another management token,
+        you will need to generate one by writing a Vault role with the `global-management` policy and
+        then reading new creds back from it.
     
     1. Configuring Vault after manually bootstrapping the Consul ACL system:
 
