--- a/website/content/docs/concepts/integrated-storage/autopilot.mdx
+++ b/website/content/docs/concepts/integrated-storage/autopilot.mdx
@@ -8,7 +8,9 @@ description: Learn about the autopilot subsystem of integrated raft storage in V
 
 Autopilot enables automated workflows for managing Raft clusters. The current
 feature set includes 3 main features: Server Stabilization, Dead Server Cleanup
-and State API. These three features are introduced in Vault 1.7.
+and State API. These three features were introduced in Vault 1.7. The Enterprise
+feature set includes 2 main features: Automated Upgrades and Redundancy Zones.
+These two features were introduced in Vault 1.11.
 
 ## Server Stabilization
 
@@ -64,6 +66,26 @@ behavior. Autopilot gets initialized with the following default values.
 - `last_contact_threshold` - `10s`
 
 - `server_stabilization_time` - `10s`
+
+## Automated Upgrades
+
+Automated Upgrades lets you automatically upgrade a cluster of Vault nodes to a new version as
+updated server nodes join the cluster. Once the number of nodes on the new version is
+equal to or greater than the number of nodes on the old version, Autopilot will promote
+the newer versioned nodes to voters, demote the older versioned nodes to non-voters,
+and initiate a leadership transfer from the older version leader to one of the newer
+versioned nodes. After the leadership transfer completes, the older versioned non-voting
+nodes can be removed from the cluster.
+
+## Redundancy Zones
+
+Redundancy Zones provide both scaling and resiliency benefits by deploying non-voting
+nodes alongside voting nodes on a per availability zone basis. When using redundancy zones,
+each zone will have exactly one voting node and as many additional non-voting nodes as desired.
+If the voting node in a zone fails, a non-voting node will be automatically promoted to
+voter. If an entire zone is lost, a non-voting node from another zone will be promoted to voter,
+maintaining quorum. These non-voting nodes function not only as hot standbys, but also
+increase read scalability.
 
 ## Replication
 
