Change role name for consistency

--- a/website/content/docs/auth/gcp.mdx
+++ b/website/content/docs/auth/gcp.mdx
@@ -354,7 +354,7 @@ GCE tokens **can only be generated from a GCE instance**.
     ```shell-session
     $ vault login \
       -method=gcp \
-      role="my-vault-role"
+      role="my-gce-role"
     ```
 
 1.  The JWT token can also be obtained from the `"service-accounts/default/identity"` endpoint for a
