--- a/website/content/api-docs/secret/consul.mdx
+++ b/website/content/api-docs/secret/consul.mdx
@@ -70,8 +70,8 @@ $ curl \
 
 This endpoint creates or updates the Consul role definition. If the role does
 not exist, it will be created. If the role already exists, it will receive
-updated attributes. At least one of either `consul_policies`, `consul_roles`,
-`service_identities`, or `node_identities` are required depending on the
+updated attributes. At least one of `consul_policies`, `consul_roles`,
+`service_identities`, or `node_identities` is required depending on the
 Consul version.
 
 | Method | Path                  |
