--- a/website/content/docs/secrets/consul.mdx
+++ b/website/content/docs/secrets/consul.mdx
@@ -29,10 +29,10 @@ management tool.
 
 1.  Configure Vault to connect and authenticate to Consul.
 
-    Vault can bootstrap the Consul ACL system for you if it hasn't already been done. If you
-    have already bootstrapped the Consul ACL system, then you will need to provide
-    Vault with a management token. This can either be the bootstrap token or another management
-    token you've created yourself.    
+    Vault can bootstrap the Consul ACL system automatically if it hasn't already been done. If you
+    have already bootstrapped the ACL system, then you will need to provide Vault with a management
+    token. This can either be the bootstrap token or another management token you've created
+    yourself.    
 
     1.  Configuring Vault without previously bootstrapping the Consul ACL system:
 
@@ -42,10 +42,10 @@ management tool.
         Success! Data written to: consul/config/access
         ```
 
-        ~> Note: When you let Vault perform the bootstrap for you, it will silently store the bootstrap token as the
-        configuration token; it will not be presented to the user. If you need another management token,
-        you will need to generate one by writing a Vault role with the `global-management` policy and
-        then reading new creds back from it.
+        ~> **Note:** Vault will silently store the bootstrap token as the configuration token when
+        it performs the automatic bootstrap; it will not be presented to the user. If you need
+        another management token, you will need to generate one by writing a Vault role with the
+        `global-management` policy and then reading new creds back from it.
     
     1. Configuring Vault after manually bootstrapping the Consul ACL system:
 
