Use manual_chain for cross-signed intermediates
This adds a note that manual_chain is required for cross-signed
intermediates, as Vault will not automatically associate the
cross-signed pair during chain construction. During issuance, the chain
is used verbatim from the issuer, so no chain detection will be used
then.

Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -1831,7 +1831,11 @@ do so, import a new issuer and a new `issuer_id` will be assigned.
    issuer's reference. Subsequent references _should_ validate previous
    entries, terminating with a root certificate. _Ideally_ a single linear
    chain would come first (from this issuer to a single root certificate)
-   before any parallel, alternate chains appear.
+   before any parallel, alternate chains appear.<br /><br />
+   This field is especially useful for cross-signed intermediates within
+   Vault. Because each cross-signed intermediate will only know of the
+   one root, but issuance should serve both, update the issuers' entries
+   with the desired `manual_chain` value.
 
 - `usage` `([]string: read-only,issuing-certificates,crl-signing)` - Allowed
   usages for this issuer. Valid options are:
