--- a/website/content/docs/secrets/kmip.mdx
+++ b/website/content/docs/secrets/kmip.mdx
@@ -91,7 +91,7 @@ allowed operations for it.
       Success! Data written to: kmip/scope/my-service/role/admin
     ```
 
-#### Supported KMIP Operations
+### Supported KMIP Operations
 
 The KMIP secrets engine currently supports the following set of operations:
 
