--- a/website/content/api-docs/secret/consul.mdx
+++ b/website/content/api-docs/secret/consul.mdx
@@ -95,7 +95,7 @@ To create a client token within a particular Consul admin partition:
 
 ### Parameters for Consul versions 1.8 and above
 
-- `consul_namespace` `(string: "")` - Specifies the Consul namespace in which the token is generated within.
+- `consul_namespace` `(string: "default")` - Specifies the Consul namespace in which the token is generated.
   The namespace must exist, and the Consul policies or roles assigned
   to the Vault role must also exist inside the given Consul namespace. If not provided, the 
   namespace `default` is used.
