--- a/website/content/api-docs/secret/consul.mdx
+++ b/website/content/api-docs/secret/consul.mdx
@@ -100,7 +100,7 @@ To create a client token within a particular Consul admin partition:
   to the Vault role must also exist inside the given Consul namespace. If not provided, the 
   namespace `default` is used.
 
-- `node_identities` `(string: "")` - The list of node identities to assign to the generated
+- `node_identities` `(list: <node identity or identities>)` - The list of node identities to assign to the generated
   token. This may be a comma-separated list to attach multiple node identities to a token.
 
 To create a client token within a particular Consul namespace:
@@ -124,7 +124,7 @@ To create a client token with node identities attached:
 
 ### Parameters for Consul version 1.5 and above
 
-- `service_identities` `(string: "")` - The list of service identities to assign to the generated
+- `service_identities` `(list: <service identity or identities>)` - The list of service identities to assign to the generated
   token. This may be a comma-separated list to attach multiple service identities to a token.
 
 - `consul_roles` `(list: <role or roles>)` – The list of Consul roles to attach to the
