adding cas documentation changes

--- a/website/content/docs/secrets/kv/kv-v2.mdx
+++ b/website/content/docs/secrets/kv/kv-v2.mdx
@@ -207,10 +207,12 @@ real path).
 
 1. Write another version, the previous version will still be accessible. The
    `-cas` flag can optionally be passed to perform a check-and-set operation. If
-   not set the write will be allowed. If set to `-cas=0` a write will only be allowed
-   if the key doesn't exist. If the index is non-zero the write will only be
-   allowed if the key’s current version matches the version specified in the
-   cas parameter.
+   not set the write will be allowed. In order for a write to be successful, `-cas` must be set to 
+  the current version of the secret. If set to 0 a write will only be allowed if 
+  the key doesn’t exist as unset keys do not have any version information. Also 
+  remember that soft deletes do not remove any underlying version data from storage.
+  In order to write to a soft deleted key, the cas parameter must match the key's 
+  current version.
 
    ```shell-session
    $ vault kv put -mount=secret -cas=1 my-secret foo=aa bar=bb
