--- a/website/content/docs/commands/kv/put.mdx
+++ b/website/content/docs/commands/kv/put.mdx
@@ -60,7 +60,9 @@ included on all commands.
 ### Command Options
 
 - `-cas` `(int: 0)` - Specifies to use a Check-And-Set operation. If not set the
-  write will be allowed. If set to 0 a write will only be allowed if the key
-  doesn’t exist. If the index is non-zero the write will only be allowed if the
-  key’s current version matches the version specified in the cas parameter. The
-  default is -1.
+  write will be allowed. In order for a write to be successful, `-cas` must be set to 
+  the current version of the secret. If set to 0 a write will only be allowed if 
+  the key doesn’t exist as unset keys do not have any version information. Also 
+  remember that soft deletes do not remove any underlying version data from storage.
+  In order to write to a soft deleted key, the cas parameter must match the key's 
+  current version.  The default is -1.
