--- a/website/content/docs/secrets/kv/kv-v2.mdx
+++ b/website/content/docs/secrets/kv/kv-v2.mdx
@@ -207,7 +207,7 @@ real path).
 
 1. Write another version, the previous version will still be accessible. The
    `-cas` flag can optionally be passed to perform a check-and-set operation. If
-   not set the write will be allowed. In order for a write to be successful, `-cas` must be set to 
+   not set the write will be allowed. In order for a write to be successful, `cas` must be set to 
   the current version of the secret. If set to 0 a write will only be allowed if 
   the key doesn’t exist as unset keys do not have any version information. Also 
   remember that soft deletes do not remove any underlying version data from storage.
