--- a/website/content/api-docs/secret/kv/kv-v2.mdx
+++ b/website/content/api-docs/secret/kv/kv-v2.mdx
@@ -157,7 +157,7 @@ have an ACL policy granting the `update` capability.
 
 - `cas` `(int: <optional>)` - This flag is required if cas_required is set
   to true on either the secret or the engine's config. If not set the write 
-  will be allowed. In order for a write to be successful, `-cas` must be set to 
+  will be allowed. In order for a write to be successful, `cas` must be set to 
   the current version of the secret. If set to 0 a write will only be allowed if 
   the key doesn’t exist as unset keys do not have any version information. Also 
   remember that soft deletes do not remove any underlying version data from storage.
