secrets/db: documents credential types and snowflake key pair auth

--- a/website/content/api-docs/secret/databases/index.mdx
+++ b/website/content/api-docs/secret/databases/index.mdx
@@ -315,6 +315,27 @@ This endpoint creates or updates a role definition.
   functionality. See the plugin's API page for more information on support and
   formatting for this parameter.
 
+- `credential_type` `(string: "password")` – Specifies the type of credential that
+  will be generated for the role. Options include: `password`, `rsa_private_key`.
+  See the plugin's API page for credential types supported by individual databases.
+
+- `credential_config` `(map<string|string>: <optional>)` – Specifies the configuration
+  for the given `credential_type`.
+
+  The following options are available for each `credential_type` value:
+
+  - `password`
+    - `password_policy` `(string: <optional>)` - The [policy](/docs/concepts/password-policies)
+      used for password generation. If not provided, defaults to the password policy of the
+      database [configuration](/api-docs/secret/databases#password_policy).
+
+  - `rsa_private_key`
+    - `key_bits` `(int: 2048)` - The bit size of the RSA key to generate. Options include:
+      `2048`, `3072`, `4096`.
+    - `format` `(string: "pkcs8")` - The output format of the generated private key
+      credential. The private key will be returned from the API in PEM encoding. Options
+      include: `pkcs8`.
+
 ### Sample Payload
 
 ```json
@@ -369,6 +390,7 @@ $ curl \
       "CREATE ROLE \"{{name}}\" WITH LOGIN PASSWORD '{{password}}' VALID UNTIL '{{expiration}}';",
       "GRANT SELECT ON ALL TABLES IN SCHEMA public TO \"{{name}}\";"
     ],
+    "credential_type": "password",
     "db_name": "mysql",
     "default_ttl": 3600,
     "max_ttl": 86400,
@@ -501,6 +523,27 @@ this in order to know the password.
   plugin type will support this functionality. See the plugin's API page for
   more information on support and formatting for this parameter.
 
+- `credential_type` `(string: "password")` – Specifies the type of credential that
+  will be generated for the role. Options include: `password`, `rsa_private_key`.
+  See the plugin's API page for credential types supported by individual databases.
+
+- `credential_config` `(map<string|string>: <optional>)` – Specifies the configuration
+  for the given `credential_type`.
+
+  The following options are available for each `credential_type` value:
+
+  - `password`
+    - `password_policy` `(string: <optional>)` - The [policy](/docs/concepts/password-policies)
+      used for password generation. If not provided, defaults to the password policy of the
+      database [configuration](/api-docs/secret/databases#password_policy).
+
+  - `rsa_private_key`
+    - `key_bits` `(int: 2048)` - The bit size of the RSA key to generate. Options include:
+      `2048`, `3072`, `4096`.
+    - `format` `(string: "pkcs8")` - The output format of the generated private key
+      credential. The private key will be returned from the API in PEM encoding. Options
+      include: `pkcs8`.
+
 ### Sample Payload
 
 ```json
@@ -550,6 +593,7 @@ $ curl \
 ```json
 {
   "data": {
+    "credential_type": "password",
     "db_name": "mysql",
     "username": "static-user",
     "rotation_statements": [
