--- a/website/content/docs/secrets/databases/index.mdx
+++ b/website/content/docs/secrets/databases/index.mdx
@@ -36,10 +36,9 @@ When credentials are requested for the Role, Vault returns the current
 password for the configured database user, allowing anyone with the proper
 Vault policies to have access to the user account in the database.
 
-~> Not all database types support static roles at this time. Please consult the
-specific database documentation on the left navigation or the table below under
-[Database Capabilities](#database-capabilities) to see if a given database
-backend supports static roles.
+-> Please consult the specific database documentation on the left navigation or
+the table below under [Database Capabilities](#database-capabilities) to see if
+a given database backend supports static roles.
 
 ## Setup
 
@@ -134,27 +133,37 @@ As of Vault 1.6, all databases support dynamic roles and static roles. All plugi
 the root user's credentials. MongoDB Atlas cannot support rotating the root user's credentials because it uses a public
 and private key pair to authenticate.
 
-| Database                                              | Root Credential Rotation | Dynamic Roles | Static Roles | Username Customization |
-| ----------------------------------------------------- | ------------------------ | ------------- | ------------ | ---------------------- |
-| [Cassandra](/docs/secrets/databases/cassandra)        | Yes                      | Yes           | Yes (1.6+)   | Yes (1.7+)             |
-| [Couchbase](/docs/secrets/databases/couchbase)        | Yes                      | Yes           | Yes          | Yes (1.7+)             |
-| [Elasticsearch](/docs/secrets/databases/elasticdb)    | Yes                      | Yes           | Yes (1.6+)   | Yes (1.8+)             |
-| [HanaDB](/docs/secrets/databases/hanadb)              | Yes (1.6+)               | Yes           | Yes (1.6+)   | No                     |
-| [InfluxDB](/docs/secrets/databases/influxdb)          | Yes                      | Yes           | Yes (1.6+)   | Yes (1.8+)             |
-| [MongoDB](/docs/secrets/databases/mongodb)            | Yes                      | Yes           | Yes          | Yes (1.7+)             |
-| [MongoDB Atlas](/docs/secrets/databases/mongodbatlas) | No                       | Yes           | Yes          | Yes (1.8+)             |
-| [MSSQL](/docs/secrets/databases/mssql)                | Yes                      | Yes           | Yes          | Yes (1.7+)             |
-| [MySQL/MariaDB](/docs/secrets/databases/mysql-maria)  | Yes                      | Yes           | Yes          | Yes (1.7+)             |
-| [Oracle](/docs/secrets/databases/oracle)              | Yes                      | Yes           | Yes          | Yes (1.7+)             |
-| [PostgreSQL](/docs/secrets/databases/postgresql)      | Yes                      | Yes           | Yes          | Yes (1.7+)             |
-| [Redshift](/docs/secrets/databases/redshift)          | Yes                      | Yes           | Yes          | Yes (1.8+)             |
-| [Snowflake](/docs/secrets/databases/snowflake)        | Yes                      | Yes           | Yes          | Yes (1.8+)             |
+| Database                                              | Root Credential Rotation | Dynamic Roles | Static Roles | Username Customization | Credential Types          |
+| ----------------------------------------------------- | ------------------------ | ------------- | ------------ | ---------------------- |---------------------------|
+| [Cassandra](/docs/secrets/databases/cassandra)        | Yes                      | Yes           | Yes (1.6+)   | Yes (1.7+)             | password                  |
+| [Couchbase](/docs/secrets/databases/couchbase)        | Yes                      | Yes           | Yes          | Yes (1.7+)             | password                  |
+| [Elasticsearch](/docs/secrets/databases/elasticdb)    | Yes                      | Yes           | Yes (1.6+)   | Yes (1.8+)             | password                  |
+| [HanaDB](/docs/secrets/databases/hanadb)              | Yes (1.6+)               | Yes           | Yes (1.6+)   | No                     | password                  |
+| [InfluxDB](/docs/secrets/databases/influxdb)          | Yes                      | Yes           | Yes (1.6+)   | Yes (1.8+)             | password                  |
+| [MongoDB](/docs/secrets/databases/mongodb)            | Yes                      | Yes           | Yes          | Yes (1.7+)             | password                  |
+| [MongoDB Atlas](/docs/secrets/databases/mongodbatlas) | No                       | Yes           | Yes          | Yes (1.8+)             | password                  |
+| [MSSQL](/docs/secrets/databases/mssql)                | Yes                      | Yes           | Yes          | Yes (1.7+)             | password                  |
+| [MySQL/MariaDB](/docs/secrets/databases/mysql-maria)  | Yes                      | Yes           | Yes          | Yes (1.7+)             | password                  |
+| [Oracle](/docs/secrets/databases/oracle)              | Yes                      | Yes           | Yes          | Yes (1.7+)             | password                  |
+| [PostgreSQL](/docs/secrets/databases/postgresql)      | Yes                      | Yes           | Yes          | Yes (1.7+)             | password                  |
+| [Redshift](/docs/secrets/databases/redshift)          | Yes                      | Yes           | Yes          | Yes (1.8+)             | password                  |
+| [Snowflake](/docs/secrets/databases/snowflake)        | Yes                      | Yes           | Yes          | Yes (1.8+)             | password, rsa_private_key |
 
 ## Custom Plugins
 
 This secrets engine allows custom database types to be run through the exposed
 plugin interface. Please see the [custom database plugin](/docs/secrets/databases/custom)
 for more information.
+
+## Credential Types
+
+Database systems support a variety of authentication methods and credential types.
+The database secrets engine supports management of credentials alternative to usernames
+and passwords. The [credential_type](/api-docs/secret/databases#credential_type)
+and [credential_config](/api-docs/secret/databases#credential_config) parameters
+of dynamic and static roles configure the credential that Vault will generate and
+make available to database plugins. See the documentation of individual database
+plugins for the credential types they support and usage examples.
 
 ## Password Generation
 
