--- a/website/content/docs/configuration/storage/cockroachdb.mdx
+++ b/website/content/docs/configuration/storage/cockroachdb.mdx
@@ -33,7 +33,7 @@ uses that driver to interact with the database.
 
 - `connection_url` `(string: <required>)` – Specifies the connection string to
   use to authenticate and connect to CockroachDB. A full list of supported
-  parameters can be found in [the pq library documentation][pglib]. For example
+  parameters can be found in [the pgx library documentation][pgxlib]. For example
   connection string URLs, see the examples section below.
 
 - `table` `(string: "vault_kv_store")` – Specifies the name of the table in
@@ -63,4 +63,4 @@ storage "cockroachdb" {
 ```
 
 [cockroachdb]: https://www.cockroachlabs.com/
-[pglib]: https://godoc.org/github.com/lib/pq#hdr-Connection_String_Parameters
+[pgxlib]: https://pkg.go.dev/github.com/jackc/pgx/v4#hdr-Establishing_a_Connection
