--- a/website/content/docs/configuration/storage/postgresql.mdx
+++ b/website/content/docs/configuration/storage/postgresql.mdx
@@ -92,7 +92,7 @@ LANGUAGE plpgsql;
 - `connection_url` `(string: <required>)` – Specifies the connection string to
   use to authenticate and connect to PostgreSQL. The connection URL can also be
   set using the `VAULT_PG_CONNECTION_URL` environment variable. A full list of supported
-  parameters can be found in [the pq library documentation][pglib]. For example
+  parameters can be found in [the pgx library documentation][pgxlib]. For example
   connection string URLs, see the examples section below.
 
 - `table` `(string: "vault_kv_store")` – Specifies the name of the table in
@@ -137,4 +137,4 @@ storage "postgresql" {
 
 [golang_setmaxidleconns]: https://golang.org/pkg/database/sql/#DB.SetMaxIdleConns
 [postgresql]: https://www.postgresql.org/
-[pglib]: https://godoc.org/github.com/lib/pq#hdr-Connection_String_Parameters
+[pgxlib]: https://pkg.go.dev/github.com/jackc/pgx/v4#hdr-Establishing_a_Connection
