--- a/website/content/docs/secrets/databases/postgresql.mdx
+++ b/website/content/docs/secrets/databases/postgresql.mdx
@@ -18,11 +18,11 @@ See the [database secrets engine](/docs/secrets/databases) docs for
 more information about setting up the database secrets engine.
 
 The PostgreSQL secrets engine uses
-[pq](https://pkg.go.dev/github.com/lib/pq?tab=doc), the same database
+[pgx](https://pkg.go.dev/github.com/jackc/pgx/v4), the same database
 library as the [PostgreSQL storage
 backend](/docs/configuration/storage/postgresql). Connection string
 options, including SSL options, can be found
-[here](https://godoc.org/github.com/lib/pq#hdr-Connection_String_Parameters)
+[here](https://pkg.go.dev/github.com/jackc/pgx/v4#hdr-Establishing_a_Connection)
 
 ## Capabilities
 
