--- a/website/content/docs/internals/architecture.mdx
+++ b/website/content/docs/internals/architecture.mdx
@@ -117,5 +117,5 @@ within the core and is not user visible.
 This has been a brief high-level overview of the architecture of Vault. There
 are more details available for each of the sub-systems.
 
-For other details, either consult the code, ask in IRC or reach out to the
+For other details, either consult the code or reach out to the
 mailing list.
