VAULT-6091 Document duration format

--- a/website/content/docs/secrets/ad.mdx
+++ b/website/content/docs/secrets/ad.mdx
@@ -2,7 +2,7 @@
 layout: docs
 page_title: Active Directory - Secrets Engines
 description: >-
-  The Active Directory secrets engine allowing Vault to generate dynamic credentials.
+The Active Directory secrets engine allowing Vault to generate dynamic credentials.
 ---
 
 # Active Directory Secrets Engine
@@ -87,45 +87,45 @@ management tool.
 
 1.  Enable the Active Directory secrets engine:
 
-    ```text
-    $ vault secrets enable ad
-    Success! Enabled the ad secrets engine at: ad/
+```text
+$ vault secrets enable ad
+Success! Enabled the ad secrets engine at: ad/
     ```
 
-    By default, the secrets engine will mount at the name of the engine. To
-    enable the secrets engine at a different path, use the `-path` argument.
+By default, the secrets engine will mount at the name of the engine. To
+enable the secrets engine at a different path, use the `-path` argument.
 
 2.  Configure the credentials that Vault uses to communicate with Active Directory
-    to generate passwords:
+to generate passwords:
 
-    ```text
-    $ vault write ad/config \
-        binddn=$USERNAME \
-        bindpass=$PASSWORD \
-        url=ldaps://138.91.247.105 \
-        userdn='dc=example,dc=com'
+```text
+$ vault write ad/config \
+    binddn=$USERNAME \
+    bindpass=$PASSWORD \
+    url=ldaps://138.91.247.105 \
+    userdn='dc=example,dc=com'
     ```
 
-    The `$USERNAME` and `$PASSWORD` given must have access to modify passwords
-    for the given account. It is possible to delegate access to change
-    passwords for these accounts to the one Vault is in control of, and this is
-    usually the highest-security solution.
+The `$USERNAME` and `$PASSWORD` given must have access to modify passwords
+for the given account. It is possible to delegate access to change
+passwords for these accounts to the one Vault is in control of, and this is
+usually the highest-security solution.
 
-    If you'd like to do a quick, insecure evaluation, also set `insecure_tls` to true. However, this is NOT RECOMMENDED
-    in a production environment. In production, we recommend `insecure_tls` is false (its default) and is used with a valid
-    `certificate`.
+If you'd like to do a quick, insecure evaluation, also set `insecure_tls` to true. However, this is NOT RECOMMENDED
+in a production environment. In production, we recommend `insecure_tls` is false (its default) and is used with a valid
+`certificate`.
 
 3.  Configure a role that maps a name in Vault to an account in Active Directory.
-    When applications request passwords, password rotation settings will be managed by
-    this role.
+When applications request passwords, password rotation settings will be managed by
+this role.
 
-    ```text
-    $ vault write ad/roles/my-application \
-        service_account_name="my-application@example.com"
+```text
+$ vault write ad/roles/my-application \
+    service_account_name="my-application@example.com"
     ```
 
 4.  Grant "my-application" access to its creds at `ad/creds/my-application` using an
-    auth method like [AppRole](/api-docs/auth/approle).
+auth method like [AppRole](/api-docs/auth/approle).
 
 ### FAQ
 
@@ -191,9 +191,9 @@ In this example, the service account names of `fizz@example.com` and `buzz@examp
 already been created on the remote AD server. They've been set aside solely for Vault to handle.
 The `ttl` is how long each check-out will last before Vault checks in a service account,
 rotating its password during check-in. The `max_ttl` is the maximum amount of time it can live
-if it's renewed. These default to `24h`. Also by default, a service account must be checked in
-by the same Vault entity or client token that checked it out. However, if this behavior causes
-problems, set `disable_check_in_enforcement=true`.
+if it's renewed. These default to `24h`, and both use [time format strings](/configuration/time-format).
+Also by default, a service account must be checked in by the same Vault entity or client token that
+checked it out. However, if this behavior causes problems, set `disable_check_in_enforcement=true`.
 
 When a library of service accounts has been created, view their status at any time to see if they're
 available or checked out.
