VAULT-6091 Update wording

--- a/website/content/docs/configuration/time-format.mdx
+++ b/website/content/docs/configuration/time-format.mdx
@@ -8,7 +8,7 @@ description: A description of Vault's time string format used throughout its con
 
 Vault uses a unique but ultimately simple time string format as part of its configuration and APIs.
 This format is used throughout Vault wherever time units, such as durations, need to be given. For
-example, the telemetry configuration contains various options using this format, such as
+example, telemetry configuration contains various options using this format, such as
 `usage_gauge_period`, which is the interval of collection for high-cardinality usage data.
 
 ## How It Works
