VAULT-6091 Update to duration format string, replace everywhere I've found so far

--- a/website/content/docs/commands/kv/metadata.mdx
+++ b/website/content/docs/commands/kv/metadata.mdx
@@ -147,11 +147,8 @@ be applied to new versions.
   to a duration to specify the `deletion_time` for all new versions written to
   this key. If not set, the backend's `delete_version_after` will be used. If
   the value is greater than the backend's `delete_version_after`, the backend's
-  `delete_version_after` will be used. Accepts [Go duration format
-  string][duration-godoc].
+  `delete_version_after` will be used. Accepts [duration format strings](/concepts/duration-format).
 
 - `custom-metadata` `(string: "")` - Specifies a key-value pair for the
   `custom_metadata` field. This can be specified multiple times to add multiple
   pieces of metadata.
-
-[duration-godoc]: https://golang.org/pkg/time/#ParseDuration
