--- a/website/content/docs/agent/template.mdx
+++ b/website/content/docs/agent/template.mdx
@@ -76,7 +76,7 @@ failures.
 - `static_secret_render_interval` `(string or integer: 5m)` - If specified, configures
   how often Vault Agent Template should render non-leased secrets such as KV v2.
   This setting will not change how often Vault Agent Templating renders leased
-  secrets.
+  secrets. Uses [duration format strings](/concepts/duration-format).
 
 ### `template_config` Stanza Example
 
