--- a/website/content/docs/concepts/duration-format.mdx
+++ b/website/content/docs/concepts/duration-format.mdx
@@ -1,13 +1,13 @@
 ---
 layout: docs
-page_title: Time String Format
-description: A description of Vault's time string format used throughout its configuration.
+page_title: Duration String Format
+description: A description of Vault's duration string format used throughout Vault.
 ---
 
-# Time String Format
+# Duration String Format
 
-Vault uses a unique but ultimately simple time string format as part of its configuration and APIs.
-This format is used throughout Vault wherever time units, such as durations, need to be given. For
+Vault uses a unique duration string format as part of its configuration and APIs.
+This format is used throughout Vault wherever durations are provided. For
 example, telemetry configuration contains various options using this format, such as
 `usage_gauge_period`, which is the interval of collection for high-cardinality usage data.
 
