VAULT-6091 Fix time/string, add another reference

--- a/website/content/api-docs/secret/azure.mdx
+++ b/website/content/api-docs/secret/azure.mdx
@@ -70,8 +70,7 @@ service principals. Environment variables will override any parameters set in th
 Aside from the permissions listed above, setting this to true should be transparent to users.
 
 - `root_password_ttl` `(string: 182d)` - Specifies how long the root password is valid for in Azure when
-  rotate-root generates a new client secret. This can be either a number of seconds or a time formatted
-  duration (ex: 24h, 48d).
+  rotate-root generates a new client secret. Uses [duration format strings](/docs/concepts/duration-format).
 
 ### Sample Payload
 
