VAULT-6091 add some misses for references to this format

--- a/website/content/api-docs/secret/consul.mdx
+++ b/website/content/api-docs/secret/consul.mdx
@@ -193,8 +193,8 @@ To create a client token with policies defined in Consul:
 
 ### Parameters for Consul version below 1.4
 
-- `lease` <sup>DEPRECATED (1.11)</sup> `(string: "")` – Specifies the lease for this role. This is provided
-  as a string duration with a time suffix like `"30s"` or `"1h"`. If not
+- `lease` <sup>DEPRECATED (1.11)</sup> `(string: "")` – Specifies the lease for this role.
+  Uses [duration format strings](/docs/concepts/duration-format). If not
   provided, the default Vault lease is used.
 
 - `policy` <sup>DEPRECATED (1.11)</sup> `(string: <policy>)` – Specifies the base64-encoded ACL policy. The
