VAULT-6091 Document Duration Format String (#15920)
* VAULT-6091 Document duration format

* VAULT-6091 Document duration format

* VAULT-6091 Update wording

* VAULT-6091 Update to duration format string, replace everywhere I've found so far

* VAULT-6091 Add the word 'string' to the nav bar

* VAULT-6091 fix link

* VAULT-6091 fix link

* VAULT-6091 Fix time/string, add another reference

* VAULT-6091 add some misses for references to this format

--- a/website/content/api-docs/secret/identity/oidc-provider.mdx
+++ b/website/content/api-docs/secret/identity/oidc-provider.mdx
@@ -285,11 +285,11 @@ This endpoint creates or updates a client.
       for the authorization code flow
 
 - `id_token_ttl` `(int or duration: "24h")` – The time-to-live for ID tokens obtained by the client.
-  This can be specified as a number of seconds or as a [Go duration format string](https://golang.org/pkg/time/#ParseDuration)
-  like `"30m"` or `"6h"`. The value should be less than the `verification_ttl` on the key.
+  Accepts [duration format strings](/docs/concepts/duration-format). The value should be less than the `verification_ttl`
+  on the key.
 
 - `access_token_ttl` `(int or duration: "24h")` – The time-to-live for access tokens obtained by the client.
-  This can be specified as a number of seconds or as a [Go duration format string](https://golang.org/pkg/time/#ParseDuration) like `"30m"` or `"6h"`.
+  Accepts [duration format strings](/docs/concepts/duration-format).
 
 ### Sample Payload
 
