--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -554,6 +554,7 @@ when signing an externally-owned intermediate.
 - `not_before_duration` `(duration: "30s")` - Specifies the duration by which to
   backdate the NotBefore property. This value has no impact in the validity period
   of the requested certificate, specified in the `ttl` field.
+  Uses [duration format strings](/docs/concepts/duration-format).
 
 - `not_after` `(string)` - Set the Not After field of the certificate with
   specified date value. The value format should be given in UTC format
@@ -1406,6 +1407,7 @@ use the values set via `config/urls`.
 - `not_before_duration` `(duration: "30s")` - Specifies the duration by which to
   backdate the NotBefore property. This value has no impact in the validity period
   of the requested certificate, specified in the `ttl` field.
+  Uses [duration format strings](/docs/concepts/duration-format).
 
 - `not_after` `(string)` - Set the Not After field of the certificate with
   specified date value. The value format should be given in UTC format
@@ -2821,13 +2823,13 @@ expiration time.
   certificate is removed due to expiry, the entry will also be removed from the
   CRL, and the CRL will be rotated.
 
-- `safety_buffer` `(string: "")` Specifies A duration (given as an integer
-  number of seconds or a string; defaults to `72h`) used as a safety buffer to
-  ensure certificates are not expunged prematurely; as an example, this can keep
+- `safety_buffer` `(string: "")` Specifies a duration using [duration format strings](/docs/concepts/duration-format)
+  used as a safety buffer to ensure certificates are not expunged prematurely; as an example, this can keep
   certificates from being removed from the CRL that, due to clock skew, might
   still be considered valid on other hosts. For a certificate to be expunged,
   the time must be after the expiration time of the certificate (according to
-  the local clock) plus the duration of `safety_buffer`.
+  the local clock) plus the duration of `safety_buffer`. Defaults to `72h`.
+
 
 #### Sample Payload
 
