--- a/website/content/api-docs/secret/ssh.mdx
+++ b/website/content/api-docs/secret/ssh.mdx
@@ -105,13 +105,13 @@ This endpoint creates or updates a named role.
 - `cidr_list` `(string: "")` – Specifies a comma separated list of CIDR blocks
   for which the role is applicable for. It is possible that a same set of CIDR
   blocks are part of multiple roles. This is a required parameter, unless the
-  role is registered under the `/config/zeroaddress` endpoint. Note: 
+  role is registered under the `/config/zeroaddress` endpoint. Note:
   [Not applicable for CA type]
 
 - `exclude_cidr_list` `(string: "")` – Specifies a comma-separated list of CIDR
   blocks. IP addresses belonging to these blocks are not accepted by the role.
   This is particularly useful when big CIDR blocks are being used by the role
-  and certain parts need to be kept out. Note: 
+  and certain parts need to be kept out. Note:
   [Not applicable for CA type]
 
 - `port` `(int: 22)` – Specifies the port number for SSH connection. Port number
@@ -250,8 +250,8 @@ This endpoint creates or updates a named role.
   migrate to `rsa-sha2-256` or `default` if the role was created with an
   explicit `algorithm_signer=rsa-sha` parameter or has been migrated to such.
 
-- `not_before_duration` `(duration: "30s")` - Specifies the duration by which
-  to backdate the `ValidAfter` property.
+- `not_before_duration` `(duration: "30s")` – Specifies the duration by which to
+  backdate the `ValidAfter` property. Uses [duration format strings](/docs/concepts/duration-format).
 
 ### Sample Payload
 
