--- a/website/content/api-docs/secret/transform.mdx
+++ b/website/content/api-docs/secret/transform.mdx
@@ -756,7 +756,7 @@ The database user configured here should only have permission to `SELECT`,
 
 - `max_connection_lifetime` `(duration: 0)` -
   The maximum amount of time a connection can be open before closing it.
-  0 means no limit.
+  0 means no limit. Uses [duration format strings](/docs/concepts/duration-format).
 
 ### Sample Payloads
 
@@ -1303,7 +1303,7 @@ $ curl \
 
 This endpoint determines if a provided plaintext value has an valid, unexpired
 tokenized value. Note that this cannot return the token, just confirm that a
-tokenized value exists, but works for all tokenization modes. 
+tokenized value exists, but works for all tokenization modes.
 This endpoint is only valid for tokenization transformations.
 
 | Method | Path                              |
@@ -1383,7 +1383,7 @@ expiration or range of expirations.  This operation is only supported
 if the transformation is configured as 'convergent', or if the mapping
 mode is exportable and the storage backend is external.  Tokens may be
 looked up with an explicit expiration, an expiration value of "any", or with a range
-of acceptable expiration times. This endpoint is only valid for tokenization 
+of acceptable expiration times. This endpoint is only valid for tokenization
 transformations.
 
 | Method | Path                              |
@@ -1399,19 +1399,19 @@ transformations.
 - `value` `(string: <required>)` –
   Specifies the token to test for whether it has a valid tokenization.
 
-- `expiration` `(string: "")` - The precise expiration of the token.  If omitted, 
+- `expiration` `(string: "")` - The precise expiration of the token.  If omitted,
   this specifically searches for tokens with no expiration.  If the string
   "any", will return tokens with any or no expiration.  Otherwise,
   the string must be the RFC3339 formatted time and date of expiration. `expiration`
   may not be used at the same time as `min_expiration` and `max_expiration`.
 
 - `min_expiration` `(string: "")` - The minimum expiration time of the token,
-  inclusive, as an RFC3339 formatted time and date. 
+  inclusive, as an RFC3339 formatted time and date.
   `min_expiration` may not be used at the same time as `expiration`.
   When provided, `max_expiration` must also be provided.
 
 - `max_expiration` `(string: "")` - The maximum expiration time of the token,
-  inclusive, as an RFC3339 formatted time and date. 
+  inclusive, as an RFC3339 formatted time and date.
   `max_expiration` may not be used at the same time as `expiration`.
   When provided, `min_expiration` must also be provided.
 
