--- a/website/content/api-docs/secret/transit.mdx
+++ b/website/content/api-docs/secret/transit.mdx
@@ -70,7 +70,7 @@ values set here cannot be changed after key creation.
 - `auto_rotate_period` `(duration: "0", optional)` – The period at which
   this key should be rotated automatically. Setting this to "0" (the default)
   will disable automatic key rotation. This value cannot be shorter than one
-  hour.
+  hour. Uses [duration format strings](/docs/concepts/duration-format).
 
 ### Sample Payload
 
@@ -238,7 +238,7 @@ are returned during a read operation on the named key.)
 - `auto_rotate_period` `(duration: "", optional)` – The period at which this
   key should be rotated automatically. Setting this to "0" will disable automatic
   key rotation. This value cannot be shorter than one hour. When no value is
-  provided, the period remains unchanged.
+  provided, the period remains unchanged. Uses [duration format strings](/docs/concepts/duration-format).
 
 ### Sample Payload
 
@@ -668,7 +668,7 @@ This endpoint returns high-quality random bytes of the specified length.
   are `hex` or `base64`.
 
 - `source` `(string: "platform")` - Specifies the source of the requested bytes.
-  `platform`, the default, sources bytes from the platform's entropy source. 
+  `platform`, the default, sources bytes from the platform's entropy source.
   `seal` sources from entropy augmentation (enterprise only).
   `all` mixes bytes from all available sources.
 
