--- a/website/content/docs/commands/secrets/tune.mdx
+++ b/website/content/docs/commands/secrets/tune.mdx
@@ -69,7 +69,7 @@ flags](/docs/commands) included on all commands.
 - `-default-lease-ttl` `(duration: "")` - The default lease TTL for this secrets
   engine. If unspecified, this defaults to the Vault server's globally
   configured default lease TTL, or a previously configured value for the secrets
-  engine.
+  engine. Uses [duration format strings](/docs/concepts/duration-format).
 
 - `-description` `(string: "")` - Specifies the description of the mount.
   This overrides the current stored value, if any.
@@ -83,6 +83,7 @@ flags](/docs/commands) included on all commands.
   configured [maximum lease TTL](/docs/configuration#max_lease_ttl), or a
   previously configured value for the secrets engine. This value is allowed to
   override the server's global max TTL; it can be longer or shorter.
+  Uses [duration format strings](/docs/concepts/duration-format).
 
 - `-passthrough-request-headers` `(string: "")` - request header values that will
   be sent to the secrets engine. Note that multiple keys may be
